<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#f7f7f7">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/age_input_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Age" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/gender_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:text="@string/gender" />
                <!--android:fontFeatureSettings="@string/"-->
                <!--android:textSize="20dp"/>-->
                <!--android:fontFamily="@string/hint_password"/>-->
                <RadioGroup
                    android:id="@+id/gender_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/gender_textview"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/chestpain_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:text="@string/ChestPain" />
                <!--android:fontFeatureSettings="@string/hint_password"-->
                <!--android:textSize="20dp"/>-->
                <!--android:fontFamily="@string/hint_password"/>-->
                <RadioGroup
                    android:id="@+id/chestpain_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/chestpain_textview"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/atypical_Angina_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/Atypical_Angina" />

                    <RadioButton
                        android:id="@+id/Typical_Angina_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Typical_Angina" />

                    <RadioButton
                        android:id="@+id/Non-Anginal_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NonAnginal" />

                    <RadioButton
                        android:id="@+id/Asymptomatic_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Asymptomatic" />
                </RadioGroup>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/blood_pressure_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/blood_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Blood Pressure" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Blood_Sugar_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Blood_Sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Blood Sugar" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/Electrocardiographic_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:text="@string/Electrocardiographic" />
                <!--android:fontFeatureSettings="@string/hint_password"-->
                <!--android:textSize="20dp"/>-->
                <!--android:fontFamily="@string/hint_password"/>-->
                <RadioGroup
                    android:id="@+id/Electrocardiographic_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Electrocardiographic_textview"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/normal_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/normal" />

                    <RadioButton
                        android:id="@+id/STT_wave_Abnormal_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/STT_wave_Abnormal" />

                    <RadioButton
                        android:id="@+id/left_ventricular_hypertrophy_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leftVentricularHypertrophy" />
                </RadioGroup>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/serum_cholestoral_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/serum_cholestoral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="serum cholestoral" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/maxm_heart_rate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/maxm_heart_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Maxm Heart Rate" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/Induced_Angina_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:text="@string/InducedAngina"
                    android:textSize="20dp" />
                <!--android:fontFamily="@string/hint_password"-->
                <!--android:fontFeatureSettings="@string/hint_password"-->

                <RadioGroup
                    android:id="@+id/Induced_Angina_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Induced_Angina_textview"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/yes_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/no_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/old_peak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Old Peak" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_age1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Slope_of_Peak_Exercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Slope of Peak Exercise" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_age2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Flouroscopy_Vessel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Flouroscopy Vessel" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/Thal_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:text="@string/Thal"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/Thal_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Thal_textview"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/normal1_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/normal" />

                    <RadioButton
                        android:id="@+id/fixed_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fixed" />

                    <RadioButton
                        android:id="@+id/Reversible_Defect_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reversible_Defect" />
                </RadioGroup>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_link_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="#1e02f2"
                android:text="@string/submit"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>